--- a/templates/gmail-auth.j2
+++ b/templates/gmail-auth.j2
@@ -1,1 +1,1 @@
-AuthInfo: "U:{{ MAIL.user }}" "I:{{ MAIL.email }}" "P:{{ MAIL.pass }}"
+AuthInfo: "U:{{ mail_user }}" "I:{{ mail_email }}" "P:{{ mail_pass }}"
