--- a/templates/passwd.client.j2
+++ b/templates/passwd.client.j2
@@ -5,4 +5,4 @@
 #
 # Example:
 ### target.mail.server.example:login:password
-*.google.com:{{ MAIL.email }}:{{ MAIL.pass }}
+*.google.com:{{ mail_email }}:{{ mail_pass }}
