Fix gmail exim4 bounces from root@domain

--- a/templates/passwd.client.j2
+++ b/templates/passwd.client.j2
@@ -5,4 +5,6 @@
 #
 # Example:
 ### target.mail.server.example:login:password
+gmail-smtp.l.google.com:{{ mail_email }}:{{ mail_pass }}
 *.google.com:{{ mail_email }}:{{ mail_pass }}
+smtp.gmail.com:{{ mail_email }}:{{ mail_pass }}
